--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,23 +39,7 @@ CPM_InitModule(${CPM_MODULE_NAME})
 # Much of this is pulled from the following stack overflow question:
 # http://stackoverflow.com/questions/9689183/cmake-googletest
 
-# We manually download GLM into our source directory so the user can access
-# glm through 'glm/...'. There is no build step since this is a header only
-# library.
-set(REPO_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/glm")
-CPM_EnsureRepoIsCurrent(
-  TARGET_DIR ${REPO_SOURCE_DIR}
-  GIT_REPOSITORY "https://github.com/g-truc/glm.git"
-  GIT_TAG "0.9.4.6"
-  )
-CPM_ExportAdditionalIncludeDir("${REPO_SOURCE_DIR}")
-
-#file( GLOB_RECURSE GLM_HEADERS
-#  ${REPO_SOURCE_DIR}/*.hpp
-#)
-#add_custom_target( ${CPM_TARGET_NAME} SOURCES ${GLM_HEADERS} )
-
-file(WRITE gtest.patch "")
+#file(WRITE gtest.patch "")
 
 # Enable ExternalProject CMake module
 include(ExternalProject)
@@ -69,12 +53,12 @@ endif()
 set_directory_properties(PROPERTIES EP_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty)
 
 # Add gtest
-ExternalProject_Add(
-    googletest
+set(EP_PROJECT_NAME "googletest")
+ExternalProject_Add(${EP_PROJECT_NAME}
     SVN_REPOSITORY http://googletest.googlecode.com/svn/trunk/
     SVN_REVISION -r 662
     TIMEOUT 10
-    PATCH_COMMAND svn patch ${CMAKE_SOURCE_DIR}/gtest.patch ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/src/googletest
+    #PATCH_COMMAND svn patch ${CMAKE_SOURCE_DIR}/gtest.patch ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/src/googletest
     # Force separate output paths for debug and release builds to allow easy
     # identification of correct lib in subsequent TARGET_LINK_LIBRARIES commands
     CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
@@ -100,11 +84,11 @@ endif()
 
 set(GOOGLE_TEST_LIBRARY ${CPM_LIB_TARGET_NAME})
 add_library(${GOOGLE_TEST_LIBRARY} SHARED IMPORTED GLOBAL)
-add_dependencies(${GOOGLE_TEST_LIBRARY} ${MONGO_EP_TARGET_NAME})
+add_dependencies(${GOOGLE_TEST_LIBRARY} ${EP_PROJECT_NAME})
 
 # Grab the source directory, that is where all of the library files
 # will reside. We will staically link against them.
-ExternalProject_Get_Property(${MONGO_EP_TARGET_NAME} SOURCE_DIR)
+ExternalProject_Get_Property(${EP_PROJECT_NAME} SOURCE_DIR)
 ExternalProject_Get_Property(googletest binary_dir)
 if(MSVC)
   set(Suffix ".lib")
@@ -120,6 +104,6 @@ endif()
 # TODO: Set imported location for debug / release libraries.
 set_target_properties(${GOOGLE_TEST_LIBRARY}
   PROPERTIES
-  IMPORTED_LOCATION ${binary_dir}/DebugLibs/${CMAKE_FIND_LIBRARY_PREFIXES}gtest${Suffix}
+  IMPORTED_LOCATION ${binary_dir}/${CMAKE_FIND_LIBRARY_PREFIXES}gtest${Suffix}
   )
 
