--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,8 +64,10 @@ set(gtest_force_shared_crt ON)
 # Add gtest now that we have the appropriate flags set.
 add_subdirectory(${GOOGLE_TEST_DIR})
 
-CPM_ExportAdditionalIncludeDir("${GOOGLE_TEST_DIR}/include")
+CPM_ExportAdditionalIncludeDir("${GOOGLE_TEST_DIR}/googletest/include")
+CPM_ExportAdditionalIncludeDir("${GOOGLE_TEST_DIR}/googlemock/include")
 CPM_ExportAdditionalLibraryTarget("gtest")
+CPM_ExportAdditionalLibraryTarget("gmock")
 
 
 # To see how one would implement google test as an external project,
